# KIV-PC

./: .gitignore  CMakeLists.txt  Makefile  Makefile.win  config.h  context.c  context.h  doc.tex  file_helper.c  file_helper.h  lcs.c  lcs.h  learning_mode.c  learning_mode.h  linked_list.c  linked_list.h  main.c  main.h  processing_mode.c  processing_mode.h  return_codes.txt  string_helper.c  string_helper.h  test_code.txt  trie.c  trie.h
dokumentace/: CRE14FB.tmp  CRE2419.tmp  CRE32D1.tmp  CRE4328.tmp  CRE4C80.tmp  CRE79E6.tmp  CRE81CD.tmp  CRE9C0A.tmp  CREA384.tmp  CREA679.tmp  CRED4EF.tmp  CREE29D.tmp  compile.bat  doc.aux  doc.lof  doc.out  doc.tex  doc.toc
